kadu (0.9.2-1) unstable; urgency=low

  * New upstream release
  * Updated debian/patches/02-.config.patch to make it fit 0.9.2

 -- Patryk Cisek <patryk@debian.org>  Wed, 11 May 2011 13:42:29 +0200

kadu (0.9.1-1) unstable; urgency=low

  * New upstream release
  * debian/kadu.desktop: Kadu now supports XMPP as well as Gadu-Gadu

 -- Patryk Cisek <patryk@debian.org>  Mon, 11 Apr 2011 13:16:43 +0200

kadu (0.9.0-1) unstable; urgency=low

  * New upstream release

 -- Patryk Cisek <patryk@debian.org>  Sun, 20 Mar 2011 09:12:01 +0100

kadu (0.6.6~rc3-1) unstable; urgency=low

  * New upstream release
  * Added libqtwebkit-dev to Build-Depends. (Closes: #618214)

 -- Patryk Cisek <patryk@debian.org>  Mon, 14 Mar 2011 09:25:25 +0100

kadu (0.6.6~rc2-1) unstable; urgency=low

  * New upstream release
  * Included information about XMPP protocol support in package descriptions
  * Changed "module(s)" to "plugin(s)" in package descriptions
  * Updated debian/patches/02-.config.patch to make it fit 0.6.6~rc2
  * Updated debian/patches/03-about-dialog.patch to make it fit 0.6.6~rc2
  * Removed debian/patches/04-gcc4.4-build-fix.patch, since it's no
    longer needed

 -- Patryk Cisek <patryk@debian.org>  Mon, 07 Mar 2011 15:16:01 +0100

kadu (0.6.6~rc1-1) unstable; urgency=low

  * New upstream release

 -- Patryk Cisek <patryk@debian.org>  Wed, 23 Feb 2011 16:28:39 +0100

kadu (0.6.6~beta17-2) unstable; urgency=low

  * Used wrap-and-sort from ubuntu-dev-tools to sort .install files, sort
    dependency fields in debian/control and wrap fields longer than 80
    characters
  * Added Vcs-Git and Vcs-Browser to debian/control
  * Added debian/build_kadu.sh script, which may be used to build Kadu
    packages when in Git checkout of Vcs-Git repository
  * Updated debian/README.source; added info about Vcs-* in
    debian/control, deleted CDBS info -- it's no longer used in Kadu
    packaging
  * Refreshed external modules list in debian/README.Debian
